# bedrock-gateway-rust

./: .dockerignore  .gitignore  .oxfmtignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  audit.toml  cliff.toml  codecov.yml  release-please-config.json
.cargo/: audit.toml
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release-please.yml
changelog/: v0.1.0.md
config/: app.toml  embeddings.toml  models.toml  regions.toml
deployment/: BedrockGatewayFargate.template  BedrockGatewayLambda.template  service-connect-streaming.json
deployment/lambda/: Dockerfile
docs/: caching-and-reasoning.md  chat-reasoning-tool-replay-incident.md  coverage.md  dockerhub-overview.md  gpt-responses-chat-adapter.md  openai-protocol-compatibility.md
docs/deploy/: docker.md  ecs.md  lambda.md  migration-from-aws-samples.md
docs/readme/: CONTRIBUTING.md  README_CN.md
helm/bedrock-gateway/: .helmignore  Chart.yaml  values.yaml
helm/bedrock-gateway/files/: app.toml  models.toml
helm/bedrock-gateway/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
proptest-regressions/bedrock/: stream_tests.txt
scripts/: check-ecs-service-connect-timeouts.sh
src/: error.rs  lib.rs  main.rs  telemetry.rs
src/bedrock/: cache.rs  cache_support.rs  cache_support_tests.rs  cache_tests.rs  capabilities.rs  capabilities_tests.rs  capsule.rs  capsule_tests.rs  client.rs  embeddings.rs  embeddings_tests.rs  mantle_chat_provider.rs  mantle_chat_provider_tests.rs  mantle_client.rs  mantle_client_tests.rs  mantle_provider.rs  mantle_provider_tests.rs  mod.rs  models.rs  models_tests.rs  provider.rs  provider_tests.rs  reasoning.rs  reasoning_tests.rs  response.rs  response_tests.rs  responses_chat_provider.rs  responses_chat_provider_tests.rs  responses_provider.rs  responses_provider_tests.rs  responses_response.rs  responses_response_tests.rs  responses_stream.rs  responses_stream_tests.rs  responses_translate.rs  responses_translate_tests.rs  stream.rs  stream_tests.rs  tokens.rs  tokens_tests.rs  (+4 more)
src/config/: capabilities.rs  capabilities_tests.rs  embeddings.rs  embeddings_tests.rs  mod.rs  regions.rs  regions_tests.rs  settings.rs  settings_tests.rs
src/domain/: mod.rs  tests.rs
src/openai/: completions_schema.rs  completions_schema_tests.rs  mod.rs  responses_schema.rs  responses_schema_tests.rs  schema.rs  schema_tests.rs
src/server/: auth.rs  auth_tests.rs  composite.rs  composite_chat.rs  composite_chat_tests.rs  composite_tests.rs  mod.rs  state.rs  state_tests.rs
src/server/routers/: mod.rs
src/telemetry/: mod.rs  otel.rs  otel_tests.rs  tests.rs
tests/: deployment_streaming_contract.rs  golden.rs  router_integration.rs
tests/fixtures/: ecs_service_connect_unsafe.json
tests/golden/: README.md  corpus.rs  harness.rs
tests/golden/fixtures/embeddings/cohere_base64/: bedrock_response.json  expected_body.json  expected_embeddings.json  request.json
tests/golden/fixtures/embeddings/cohere_float/: bedrock_response.json  expected_embeddings.json  request.json
tests/golden/fixtures/embeddings/titan_float/: bedrock_response.json  expected_body.json  expected_embeddings.json  request.json
tests/golden/fixtures/response/cache_read_tokens/: bedrock_output.json  expected_openai_response.json
tests/golden/fixtures/response/finish_reason_content_filter/: bedrock_output.json  expected_openai_response.json
tests/golden/fixtures/response/finish_reason_length/: bedrock_output.json  expected_openai_response.json
tests/golden/fixtures/response/placeholder_selftest/: bedrock_output.json  expected_openai_response.json
tests/golden/fixtures/response/reasoning_inline_think/: bedrock_output.json  expected_openai_response.json
tests/golden/fixtures/response/text_basic/: bedrock_output.json  expected_openai_response.json
tests/golden/fixtures/response/tool_use_max_tokens/: bedrock_output.json  expected_openai_response.json
tests/golden/fixtures/response/tool_use_single/: bedrock_output.json  expected_openai_response.json
tests/golden/fixtures/response/usage_fallback_no_total/: bedrock_output.json  expected_openai_response.json
tests/golden/fixtures/response/usage_no_cache_regression/: bedrock_output.json  expected_openai_response.json
tests/golden/fixtures/responses_response/responses_reasoning/: bedrock_output.json  expected_responses_response.json  openai_request.json
tests/golden/fixtures/responses_response/responses_text/: bedrock_output.json  expected_responses_response.json  openai_request.json
tests/golden/fixtures/responses_response/responses_tool_call/: bedrock_output.json  expected_responses_response.json  openai_request.json
tests/golden/fixtures/responses_response/tool_use_max_tokens/: bedrock_output.json  expected_responses_response.json  openai_request.json
tests/golden/fixtures/responses_sse_capture/: reasoning_stream.sse  text_stream.sse  tool_stream.sse
tests/golden/fixtures/responses_stream/responses_reasoning/: bedrock_events.jsonl  expected_response_events.jsonl  openai_request.json
tests/golden/fixtures/responses_stream/responses_text/: bedrock_events.jsonl  expected_response_events.jsonl  openai_request.json
tests/golden/fixtures/responses_stream/responses_tool/: bedrock_events.jsonl  expected_response_events.jsonl  openai_request.json
tests/golden/fixtures/streaming/placeholder_selftest/: bedrock_events.jsonl  expected_sse_chunks.jsonl
(+44 files in other folders)
